--- a/index.css
+++ b/index.css
@@ -4,14 +4,14 @@ body{
 }
 
 h1{
-    background-color: grey;
+    background-color: black;
     color: greenyellow;
     text-align-last: center;
 }
 
 a{
     color: greenyellow;
-    background-color: grey;
+    background-color: black;
 }
 
 address{text-align: center;}
